fixed spacing

--- a/solution-hw1/style.css
+++ b/solution-hw1/style.css
@@ -96,9 +96,6 @@ h3.subtitle {
     line-height: 6px;
 }
 
-.cart-title {
-    padding-bottom: 50px;
-}
 
 /* yellow highlight on hover */
 
@@ -224,14 +221,11 @@ h3.subtitle {
     background: black;
     margin-bottom: 50px;
     width: 70%;
+  
 }
-
-
-/* Highlight only the cart-title on the shopping cart page */
 
 a h2#cart-highlight-only {
     text-transform: uppercase;
-    font-weight: 300;
     font-size: 18px;
     background-color: yellow;
     padding: 5px 5px;
@@ -239,8 +233,9 @@ a h2#cart-highlight-only {
     text-emphasis: bold;
 }
 
-#cart-highlight-only{
-    padding-bottom: 50px;
+h3.subtitle {
+    padding-top: 100px;
+    margin-top: 20px; 
 }
 
 a h1#remove-highlight {
@@ -250,4 +245,5 @@ a h1#remove-highlight {
     font-size: 18px;
     background-color: transparent; 
     padding: 0;
+    font-weight: 100;
 }
